--- a/public/404.html
+++ b/public/404.html
@@ -77,7 +77,7 @@
     canvas.height = 1200;
     draw();
 
-    var textStrip = ["404 Page not found"];
+    var textStrip = ["404 You've lost your way traveller, please go back"];
 
     var stripCount = 60, stripX = new Array(), stripY = new Array(), dY = new Array(), stripFontSize = new Array();
 
