--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
     canvas.height = 1200;
     draw();
 
-    var textStrip = ["500 We're sorry but something went wrong"];
+    var textStrip = ["500 There is something what should not be here"];
 
     var stripCount = 60, stripX = new Array(), stripY = new Array(), dY = new Array(), stripFontSize = new Array();
 
