deleted rails default error page class

--- a/public/500.html
+++ b/public/500.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
   <script>
     var canvas = document.body.appendChild( document.createElement( 'canvas' ) ),
